refactor(location): change update method to be PUT and remove partial updates for location.
- feat(Option): add Option utility for partial update refactor in the future
